fix: corregi el contraste de los placeholders en el formulario

--- a/estilos.css
+++ b/estilos.css
@@ -87,13 +87,19 @@ form{
     max-width:500px;
 }
 
-input,
-textarea{
-    padding:15px;
-    border:none;
-    border-radius:10px;
-    font-size:16px;
+input, textarea {
+    background-color: #ffffff; 
+    color: #16245f;            
+    border: 2px solid transparent;
+    transition: border 0.3s ease;
+    padding: 10px;             
+    border-radius: 6px;
 }
+
+input::placeholder, textarea::placeholder {
+    color: rgba(7, 45, 91, 0.5); 
+}
+
 
 textarea{
     height:120px;
@@ -117,10 +123,11 @@ button:hover{
 
 /* footer */
 footer{
-    background:#041033;
+    background:#16245f;
+    color: #fff;
     text-align:center;
     padding:20px;
-    margin-top:40px;
+    margin-top:90px;
 }/* responsive */
 
 @media(max-width:768px){
